THE GEOLOCATION POSTING SYSTEM WORKS.

--- a/geotest.html
+++ b/geotest.html
@@ -12,7 +12,7 @@
         }
       }
       function showPosition(pos){
-	window.location = "gather.php?lat=" + pos.coords.latitude + "&lng=" + pos.coords.longitude;
+	alert(pos.coords.latitude + " -- " + pos.coords.longitude);
       }
     </script>
   </body>
